--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,14 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url 'https://www.jitpack.io' }
+        maven{url 'https//jetpack.io'}
+    }
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
