--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.library'    // 认准这行
 apply plugin: 'com.github.dcendents.android-maven'    // 添加本行
 group='com.github.haveagoodtimef'
 
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         minSdkVersion 24
-        applicationId "com.fhz.utilsfhz"
+//        applicationId "com.fhz.utilsfhz"
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
