--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,14 @@ android {
 
 dependencies {
 
+
+    //Retrofit依赖
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    //Gson converter gson解析
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    //RxJava2 Adapter
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
